Issue #3143718 by geerlingguy, saschaeggi: Dark Mode contrast low for some labels

--- a/styles/_throbber.scss
+++ b/styles/_throbber.scss
@@ -60,3 +60,7 @@
     transform: rotateZ(360deg);
   }
 }
+
+.claro-autocomplete__message {
+  color: var(--colorGinPrimary);
+}
