--- a/styles/_views.scss
+++ b/styles/_views.scss
@@ -388,3 +388,11 @@
     margin: 0;
   }
 }
+
+.machine-name-label {
+  color: var(--colorGinText);
+}
+
+.machine-name-value {
+  color: var(--colorGinTitle);
+}
